@@ -1,3 +1,7 @@
+2004-08-11  Rich Kilmer <rich@infoether.com>
+       * bin/generate_yaml_index: updated to work with new gem format (and use the Gem::Format
+         class to read).  Will deploy after testing on RubyForge.
+
 2004-08-11  Chad Fowler <chad@chadfowler.com>
        * lib/rubygems/gem_commands.rb: query is now case insensitive (as it used to be)
        * lib/rubygems/installer.rb: gem_make.out wasn't being written when an extension failed to compile.
